--- a/index.html
+++ b/index.html
@@ -5,12 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>INTERACTIVE WEB GAME</title>
+    <link rel="stylesheet" href="./lib/css/common.css">
+    <link rel="stylesheet" href="./css/game.css">
 </head>
 
 <body>
+    <div class="game_app">
+        <div class="game">
+            <div class="hero_box">
+                <div class="hero attack">
 
-    <script src="./js/game.js"></script>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script type="text/javascript" src="./js/game.js" charset="utf-8"></script>
 </body>
 
 </html>
