--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
     <div class="game_app">
         <div class="game">
             <div class="hero_box">
-                <div class="hero attack">
+                <div class="hero">
 
                 </div>
             </div>
         </div>
     </div>
     <script type="text/javascript" src="./js/game.js" charset="utf-8"></script>
+    <script type="text/javascript" src="./js/class.js" charset="utf-8"></script>
 </body>
 
 </html>
