--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <div class="game_app">
+        <div class="sky"></div>
         <div class="game">
             <div class="hero_box">
                 <div class="hero">
