--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
         <div class="sky"></div>
         <div class="game">
             <div class="hero_box">
-                <div class="hero">
-
-                </div>
+                <div class="hero"></div>
+            </div>
+            <div class="monster_box">
+                <div class="monster"></div>
             </div>
         </div>
     </div>
