--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <div class="hero_box">
                 <div class="hero"></div>
             </div>
-            <div class="monster_box">
+            <!-- <div class="monster_box">
                 <div class="monster"></div>
-            </div>
+            </div> -->
         </div>
     </div>
     <script type="text/javascript" src="./js/game.js" charset="utf-8"></script>
