--- a/index.html
+++ b/index.html
@@ -17,9 +17,18 @@
             <div class="hero_box">
                 <div class="hero"></div>
             </div>
-            <!-- <div class="monster_box">
-                <div class="monster"></div>
-            </div> -->
+        </div>
+        <div class="game_info">
+            <div class="hero_state">
+                <figure class="hero_img">
+                    <img src="./lib/images/ninja_profile.png" alt="">
+                </figure>
+                <div class="state_box">
+                    <div class="hp">
+                        <span></span>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <script type="text/javascript" src="./js/game.js" charset="utf-8"></script>
