--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                 </div>
             </div>
         </div>
+        <div class="game_over">
+            <p>GAME OVER</p>
+        </div>
     </div>
     <script type="text/javascript" src="./js/game.js" charset="utf-8"></script>
     <script type="text/javascript" src="./js/class.js" charset="utf-8"></script>
