--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div class="sky"></div>
         <div class="game">
             <div class="hero_box">
+                <span class="level_up"></span>
                 <div class="hero"></div>
             </div>
         </div>
@@ -22,9 +23,15 @@
             <div class="hero_state">
                 <figure class="hero_img">
                     <img src="./lib/images/ninja_profile.png" alt="">
+                    <div class="level_box">
+                        <span>Level.</span><strong>1</strong>
+                    </div>
                 </figure>
                 <div class="state_box">
                     <div class="hp">
+                        <span></span>
+                    </div>
+                    <div class="exp">
                         <span></span>
                     </div>
                 </div>
