--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
                 <div class="hero"></div>
             </div>
         </div>
+        <div class="npc_box">
+            <div class="talk_box">
+                <p>큰일이다..<br>사람들이 좀비로 변하고 있어</br><span>대화 Enter</span></p>
+            </div>
+            <div class="npc"></div>
+        </div>
         <div class="game_info">
             <div class="hero_state">
                 <figure class="hero_img">
