--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
         <div class="game_over">
             <p>GAME OVER</p>
         </div>
+        <div class="quest_modal">
+            <div class="inner_box">
+                <div class="close">닫기 Enter</div>
+            </div>
+        </div>
     </div>
     <script type="text/javascript" src="./js/monster.js" charset="utf-8"></script>
     <script type="text/javascript" src="./js/game.js" charset="utf-8"></script>
