--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
         </div>
         <div class="quest_modal">
             <div class="inner_box">
+                <div class="quest_talk">
+                    <figure class="npc_img">
+                        <img src="./lib/images/npc.png">
+                    </figure>
+                    <p>
+                        마을에 몬스터가 출몰해 주민들을 좀비로 만들고 있다. 몬스터를 사냥해서 주민을 구하고
+                        <span>레벨을 5 이상</span>으로 만들어 힘을 증명한다면 좀비왕을 물리칠 수 있도록 내 힘을 빌려줄께!
+                    </p>
+                </div>
                 <div class="close">닫기 Enter</div>
             </div>
         </div>
